[package]
name = "messagebroker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
redis = { version = "0.23.0", features = ["log", "serde_json", "json"] }
serde = "1.0.163"
serde_json = "1.0.96"
uuid = { version = "1.3.2", features = ["v4"] }
