[package]
name = "messagebroker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
ctrlc = { version = "3.2.5", features = ["termination"] }
env_logger = "0.10.0"
envy = "0.4.2"
gethostname = "0.4.3"
log = "0.4.17"
redis = { version = "0.23.0", features = ["log", "serde_json", "json"] }
redis-test = "0.2.0"
serde = "1.0.163"
serde_json = "1.0.96"
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.3.2", features = ["v4"] }
